tests/old_invalid/non_static_owner.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/non_static_owner.rs:11:40
   |
11 | sync_once_self_cell!(BorrowFromStack, &'_ String, Dependent<'_>,);
   |                                        ^^ expected named lifetime parameter
   |

error[E0621]: explicit lifetime required in the type of `owner`
  --> $DIR/non_static_owner.rs:11:1
   |
11 | sync_once_self_cell!(BorrowFromStack, &'_ String, Dependent<'_>,);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^----------^^^^^^^^^^^^^^^^^^
   | |                                     |
   | |                                     help: add explicit lifetime `'static` to the type of `owner`: `&'static String`
   | lifetime `'static` required
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
